fix grid spacing'

--- a/app/assets/stylesheets/items.css
+++ b/app/assets/stylesheets/items.css
@@ -18,6 +18,7 @@
   margin: 50px;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  grid-row-gap: 20px;
 }
 
 #stats-block {
